@@ -1,3 +1,11 @@
+Tue Nov 23 12:15:35 UTC 2010  Marcel Smit  <msmit@remedy.nl>
+
+        * connectors/dds4ccm/tests/MultiTopic/Connector/MultiTopic_Connector_T.cpp:
+        * connectors/dds4ccm/tests/MultiTopic/Receiver/MultiTopic_Receiver_exec.h:
+        * connectors/dds4ccm/tests/MultiTopic/Receiver/MultiTopic_Receiver_exec.cpp:
+        * connectors/dds4ccm/tests/MultiTopic/descriptors/Plan.cdp:
+          The getter functionality works now. Listeners to be implemented next.
+
 Tue Nov 23 11:23:11 UTC 2010  Marcel Smit  <msmit@remedy.nl>
 
         * connectors/dds4ccm/tests/MultiTopic/Connector/MultiTopic_Connector_T.h:
